force-app/main/default/objects/ssot__FundingAwardAmendment__dlm/fields/ssot__AdjustedAwardAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustedAwardAmount__c</fullName>
    <label>Adjusted Award Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustedAwardAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>