force-app/main/default/objects/ssot__FundingAwardAmendment__dlm/fields/ssot__AdjustedEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustedEndDateTime__c</fullName>
    <label>Adjusted End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustedEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>