force-app/main/default/objects/ssot__FundingAwardAmendment__dlm/fields/ssot__FundingAmendmentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__FundingAmendmentType__c</fullName>
    <label>Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FundingAmendmentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>