force-app/main/default/objects/ssot__FundingAwardAmendment__dlm/fields/ssot__FundingAwardId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FundingAwardId__c</fullName>
    <label>Funding Award</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FundingAwardId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>