force-app/main/default/objects/ssot__FundingAwardAmendment__dlm/fields/ssot__ProposedEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProposedEndDateTime__c</fullName>
    <label>Proposed End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProposedEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>