force-app/main/default/objects/ssot__FundingAwardAmendment__dlm/fields/ssot__rel_1716726637409_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726637409_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAwardAmendment_FundingAwardId_rel</label>
    <referenceTo>ssot__FundingAward__dlm</referenceTo>
    <relationshipLabel>FundingAwardAmendment_FundingAwardId_rel</relationshipLabel>
    <relationshipName>rel_1716726637409_end</relationshipName>
    <type>Lookup</type>
</CustomField>