force-app/main/default/objects/ssot__FundingAwardAmendment__dlm/fields/ssot__rel_1724992756758_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724992756758_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAwardAmendment_ContractId_map_rel</label>
    <referenceTo>ssot__Contract__dlm</referenceTo>
    <relationshipLabel>FundingAwardAmendment_ContractId_map_rel</relationshipLabel>
    <relationshipName>rel_1724992756758_end</relationshipName>
    <type>Lookup</type>
</CustomField>